<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_toolbar" />

    <TextView
        android:id="@+id/tv_forgot_email_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/forgot_email_description"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/_14ssp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:hint="@string/email_description"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="@dimen/_8sdp"
            android:singleLine="true"
            android:visibility="visible" />


        <Button
            android:id="@+id/reset_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/button_bg"
            android:text="@string/reset_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:visibility="gone" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>